// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Marquee > renders with as correctly 1`] = `
"<section data-orientation="horizontal" data-slot="root" class="">
  <div data-slot="content" class=""></div>
  <div data-slot="content" class=""></div>
  <div data-slot="content" class=""></div>
  <div data-slot="content" class=""></div>
</section>"
`;

exports[`Marquee > renders with class correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="text-xl">
  <div data-slot="content" class=""></div>
  <div data-slot="content" class=""></div>
  <div data-slot="content" class=""></div>
  <div data-slot="content" class=""></div>
</div>"
`;

exports[`Marquee > renders with default slot correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <div data-slot="content" class="">Default slot</div>
  <div data-slot="content" class="">Default slot</div>
  <div data-slot="content" class="">Default slot</div>
  <div data-slot="content" class="">Default slot</div>
</div>"
`;

exports[`Marquee > renders with orientation correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="content" class=""></div>
  <div data-slot="content" class=""></div>
  <div data-slot="content" class=""></div>
  <div data-slot="content" class=""></div>
</div>"
`;

exports[`Marquee > renders with overlay off correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <div data-slot="content" class=""></div>
  <div data-slot="content" class=""></div>
  <div data-slot="content" class=""></div>
  <div data-slot="content" class=""></div>
</div>"
`;

exports[`Marquee > renders with pauseOnHover correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <div data-slot="content" class=""></div>
  <div data-slot="content" class=""></div>
  <div data-slot="content" class=""></div>
  <div data-slot="content" class=""></div>
</div>"
`;

exports[`Marquee > renders with repeat correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <div data-slot="content" class=""></div>
  <div data-slot="content" class=""></div>
  <div data-slot="content" class=""></div>
  <div data-slot="content" class=""></div>
  <div data-slot="content" class=""></div>
  <div data-slot="content" class=""></div>
</div>"
`;

exports[`Marquee > renders with reverse correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <div data-slot="content" class=""></div>
  <div data-slot="content" class=""></div>
  <div data-slot="content" class=""></div>
  <div data-slot="content" class=""></div>
</div>"
`;

exports[`Marquee > renders with ui correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <div data-slot="content" class="gap-4"></div>
  <div data-slot="content" class="gap-4"></div>
  <div data-slot="content" class="gap-4"></div>
  <div data-slot="content" class="gap-4"></div>
</div>"
`;
